# quant_dash

./: .gitignore  README.md  config.py  dashboard.py  generate_data.py  pnl.py  pyproject.toml  reconciliation.py  requirements.txt  risk_monitor.py
data/: broker_trades.parquet  internal_trades.parquet  marks.parquet  portfolio.parquet
pages/: 1_Reconciliation_Board.py  2_PnL_by_Team.py
